despatma-visitor/tests/fail/invalid_dyn.stderr
error[E0404]: expected trait, found struct `Rectangle`
 --> tests/fail/invalid_dyn.rs:7:26
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube);
  |                          ^^^^^^^^^ not a trait

error[E0782]: trait objects must include the `dyn` keyword
 --> tests/fail/invalid_dyn.rs:7:54
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube);
  |                                                      ^^^^
  |
help: add `dyn` keyword before this trait
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                                      +++
help: alternatively use a blanket implementation to implement `visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube)` for all types that also implement `Cube`
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, T)<T: Cube>;
  |                                                      ~ +++++++++
